<resources>
    <string name="app_name">ECHO</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="slide_menu_docs">Documentation</string>
    <string name="slide_menu_maintenance">Maintenance</string>
    <string name="slide_menu_specs">Unit Specs</string>
    <string name="slide_menu_guide">Beginner\'s Guide</string>
    <string name="slide_menu_locator">Dealer Locator</string>
    <string name="slide_menu_settings">App Settings</string>
    <string name="slide_menu_contact">Contact Us</string>
    <string name="menu_garage">My Garage</string>
    <string name="slide_menu_home">Home</string>
    <string name="title_activity_first_time_guide">FirstTimeGuideActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="label_address">Address</string>
    <string name="label_phone">Phone Number</string>
    <string name="label_web">Website</string>
    <string name="label_chat">Ask a Question/Chat</string>
    <string name="service_email">echohelp@echo-usa.com</string>
    <string name="label_app_email">App Feedback</string>
    <string name="V58_URL">http://www.echocordless.com/</string>
    <string name="no_unit_selected">No unit selected</string>
    <string name="pick_unit">Pick a unit from My Garage</string>
    <string name="catalog">Catalog</string>
    <string name="btn_learn_more">Click to learn more</string>

    <string name="arrow_name">arrow</string>
    <string name="arrow_point_up">M0,6 l12,0 l-6,-6 z</string>
    <string name="item_viewer_text">Sorry! I can\'t display this at the moment.</string>
    <string name="nav_drawer_video">Videos</string>

    <string name="locator_text">Displaying closest ten dealers to your current location</string>
</resources>
